--- a/DellyShopApp/DellyShopApp/Views/TabbedPages/BasketPage.xaml
+++ b/DellyShopApp/DellyShopApp/Views/TabbedPages/BasketPage.xaml
@@ -33,7 +33,8 @@
                         VerticalOptions="StartAndExpand"
                         VerticalTextAlignment="Center" />
                 </StackLayout>
-                <customControl:RepeaterView x:Name="BasketItems">
+                <customControl:RepeaterView x:Name="BasketItems"
+                                            ItemsSource="{Binding ProductsInBasket}">
                     <customControl:RepeaterView.ItemTemplate>
                         <DataTemplate>
                             <pancakeView:PancakeView Margin="0,10,0,0" Style="{DynamicResource PancakeFrameStyle}">
@@ -54,7 +55,7 @@
                                         <Image
                                             Aspect="AspectFill"
                                             HeightRequest="50"
-                                            Source="{Binding Image}"
+                                            Source="{Binding DefaultImage}"
                                             WidthRequest="50" />
                                     </pancakeView:PancakeView>
 
@@ -62,7 +63,7 @@
                                         <Label
                                             FontFamily="{DynamicResource VerdanaProRegular}"
                                             FontSize="15"
-                                            Text="{Binding Title}"
+                                            Text="{Binding ProductName}"
                                             TextColor="{DynamicResource WhiteDarkFontColor}" />
                                         <Label
                                             FontFamily="{DynamicResource VerdanaProRegular}"
@@ -162,6 +163,7 @@
                             VerticalOptions="Center" />
                         <Label
                             x:Name="TotalPrice"
+                            Text="{Binding TotalCost,StringFormat='Rs:{0}'}"
                             Margin="0,0,10,0"
                             FontAttributes="Bold"
                             FontFamily="{DynamicResource VerdanaProSemiBold}"
